--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body>
+    
     <div class="app">
         <div class="layout">
-
+           
             <!-- Header START -->
             <section id="mainnav">
                 <div class="header">
@@ -504,6 +505,8 @@
 
                 <!-- Content Wrapper START -->
                 <div class="main-content">
+                    <h2>post my student id</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione excepturi nesciunt nostrum repellendus doloribus laborum amet. Dignissimos quis at fugit voluptatibus? Ducimus quos tempora eaque mollitia cumque voluptatibus molestiae neque!</p>
                     <div class="row mb-3">
                         <div class="col-lg-12 mobilpadding">
                             <div class="stickyNav">
